# xhec-mlops-project-student

./: .pre-commit-config.yaml  Dockerfile.app  PR_0.md  PR_1.md  README.md  environment.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
notebooks/: eda.ipynb  modelling.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/627461816742280132/: meta.yaml
prefect_solution/: modeling.py  preprocessing.py
src/modelling/: config.py  deployment.py  main.py  predicting.py  preprocessing.py  training.py  utils.py  workflows.py
src/web_service/: main.py  utils.py
src/web_service/lib/: inference.py  models.py
