[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
authors = [
  { name = "valentined19092001", email = "user@email.com" },
  { name = "zinebmechiche", email = "zineb.mechiche-alami@polytechnique.edu" },
  { name = "alexbohane", email = "alexbohane@hotmail.co.uk" },
  { name = "trung_dan_phan", email = "trung-dan.phan@polytechnique.edu" },
  { name = "kumoyyds", email = "danbzbr@gmail.com" },
]
description = "This repository contains the solution for the X-HEC MLOps Project on the industrialization of Abalone age prediction model."
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10, <3.12"

[project.urls]
"Homepage" = "https://github.com/Trung-Dan-Phan/xhec-mlops-project-student"

[tool.setuptools]
packages = ["src"]